# LangGraph-MCP-Client

./: .gitignore  Chatbot_with_mcp.py  main.py  pyproject.toml  tailwind.config.js
frontend/: index.html  script.js
